Fix 'For me' arrows on mobile

--- a/development/style/mobile.css
+++ b/development/style/mobile.css
@@ -123,8 +123,8 @@
 .msg-time {
     right: -40px;
 }
-.with-ny-name::after {
-    left: -70px;
+.with-my-name::after {
+    left: -69px;
 }
 
 /* Smaller reply form height */
